fix the colab external file for lab 002

--- a/labs/002-tutorial.ipynb
+++ b/labs/002-tutorial.ipynb
@@ -8,34 +8,113 @@
     "\n",
     "## Welcome to the LangChain RunnableSequence Tutorial!\n",
     "\n",
-    "In this notebook, we'll explore LangChain, focusing on loading prompts from files and using PromptTemplates. Since we are focusing on file reading, we must ensure we have a sample file separate from the code.\n"
+    "In this notebook, we'll explore LangChain, focusing on loading prompts from files and using PromptTemplates. Since we are focusing on file reading, we must ensure we have a sample file separate from the code.\n",
+    "\n",
+    "[![Open in Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/Agentic-Insights/langchain-labs/blob/main/labs/002-tutorial.ipynb)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: langchain in c:\\users\\vaski\\desktop\\langchain-labs\\.conda\\lib\\site-packages (0.2.10)\n",
+      "Requirement already satisfied: langchain-openai in c:\\users\\vaski\\desktop\\langchain-labs\\.conda\\lib\\site-packages (0.1.17)\n",
+      "Requirement already satisfied: python-dotenv in c:\\users\\vaski\\desktop\\langchain-labs\\.conda\\lib\\site-packages (1.0.1)\n",
+      "Requirement already satisfied: PyYAML>=5.3 in c:\\users\\vaski\\desktop\\langchain-labs\\.conda\\lib\\site-packages (from langchain) (6.0.1)\n",
+      "Requirement already satisfied: SQLAlchemy<3,>=1.4 in c:\\users\\vaski\\desktop\\langchain-labs\\.conda\\lib\\site-packages (from langchain) (2.0.31)\n",
+      "Requirement already satisfied: aiohttp<4.0.0,>=3.8.3 in c:\\users\\vaski\\desktop\\langchain-labs\\.conda\\lib\\site-packages (from langchain) (3.9.5)\n",
+      "Requirement already satisfied: async-timeout<5.0.0,>=4.0.0 in c:\\users\\vaski\\desktop\\langchain-labs\\.conda\\lib\\site-packages (from langchain) (4.0.3)\n",
+      "Requirement already satisfied: langchain-core<0.3.0,>=0.2.22 in c:\\users\\vaski\\desktop\\langchain-labs\\.conda\\lib\\site-packages (from langchain) (0.2.22)\n",
+      "Requirement already satisfied: langchain-text-splitters<0.3.0,>=0.2.0 in c:\\users\\vaski\\desktop\\langchain-labs\\.conda\\lib\\site-packages (from langchain) (0.2.2)\n",
+      "Requirement already satisfied: langsmith<0.2.0,>=0.1.17 in c:\\users\\vaski\\desktop\\langchain-labs\\.conda\\lib\\site-packages (from langchain) (0.1.93)\n",
+      "Requirement already satisfied: numpy<2,>=1 in c:\\users\\vaski\\desktop\\langchain-labs\\.conda\\lib\\site-packages (from langchain) (1.26.4)\n",
+      "Requirement already satisfied: pydantic<3,>=1 in c:\\users\\vaski\\desktop\\langchain-labs\\.conda\\lib\\site-packages (from langchain) (2.8.2)\n",
+      "Requirement already satisfied: requests<3,>=2 in c:\\users\\vaski\\desktop\\langchain-labs\\.conda\\lib\\site-packages (from langchain) (2.32.3)\n",
+      "Requirement already satisfied: tenacity!=8.4.0,<9.0.0,>=8.1.0 in c:\\users\\vaski\\desktop\\langchain-labs\\.conda\\lib\\site-packages (from langchain) (8.5.0)\n",
+      "Requirement already satisfied: openai<2.0.0,>=1.32.0 in c:\\users\\vaski\\desktop\\langchain-labs\\.conda\\lib\\site-packages (from langchain-openai) (1.37.0)\n",
+      "Requirement already satisfied: tiktoken<1,>=0.7 in c:\\users\\vaski\\desktop\\langchain-labs\\.conda\\lib\\site-packages (from langchain-openai) (0.7.0)\n",
+      "Requirement already satisfied: aiosignal>=1.1.2 in c:\\users\\vaski\\desktop\\langchain-labs\\.conda\\lib\\site-packages (from aiohttp<4.0.0,>=3.8.3->langchain) (1.3.1)\n",
+      "Requirement already satisfied: attrs>=17.3.0 in c:\\users\\vaski\\desktop\\langchain-labs\\.conda\\lib\\site-packages (from aiohttp<4.0.0,>=3.8.3->langchain) (23.2.0)\n",
+      "Requirement already satisfied: frozenlist>=1.1.1 in c:\\users\\vaski\\desktop\\langchain-labs\\.conda\\lib\\site-packages (from aiohttp<4.0.0,>=3.8.3->langchain) (1.4.1)\n",
+      "Requirement already satisfied: multidict<7.0,>=4.5 in c:\\users\\vaski\\desktop\\langchain-labs\\.conda\\lib\\site-packages (from aiohttp<4.0.0,>=3.8.3->langchain) (6.0.5)\n",
+      "Requirement already satisfied: yarl<2.0,>=1.0 in c:\\users\\vaski\\desktop\\langchain-labs\\.conda\\lib\\site-packages (from aiohttp<4.0.0,>=3.8.3->langchain) (1.9.4)\n",
+      "Requirement already satisfied: jsonpatch<2.0,>=1.33 in c:\\users\\vaski\\desktop\\langchain-labs\\.conda\\lib\\site-packages (from langchain-core<0.3.0,>=0.2.22->langchain) (1.33)\n",
+      "Requirement already satisfied: packaging<25,>=23.2 in c:\\users\\vaski\\desktop\\langchain-labs\\.conda\\lib\\site-packages (from langchain-core<0.3.0,>=0.2.22->langchain) (23.2)\n",
+      "Requirement already satisfied: orjson<4.0.0,>=3.9.14 in c:\\users\\vaski\\desktop\\langchain-labs\\.conda\\lib\\site-packages (from langsmith<0.2.0,>=0.1.17->langchain) (3.10.6)\n",
+      "Requirement already satisfied: anyio<5,>=3.5.0 in c:\\users\\vaski\\desktop\\langchain-labs\\.conda\\lib\\site-packages (from openai<2.0.0,>=1.32.0->langchain-openai) (4.4.0)\n",
+      "Requirement already satisfied: distro<2,>=1.7.0 in c:\\users\\vaski\\desktop\\langchain-labs\\.conda\\lib\\site-packages (from openai<2.0.0,>=1.32.0->langchain-openai) (1.9.0)\n",
+      "Requirement already satisfied: httpx<1,>=0.23.0 in c:\\users\\vaski\\desktop\\langchain-labs\\.conda\\lib\\site-packages (from openai<2.0.0,>=1.32.0->langchain-openai) (0.27.0)\n",
+      "Requirement already satisfied: sniffio in c:\\users\\vaski\\desktop\\langchain-labs\\.conda\\lib\\site-packages (from openai<2.0.0,>=1.32.0->langchain-openai) (1.3.1)\n",
+      "Requirement already satisfied: tqdm>4 in c:\\users\\vaski\\desktop\\langchain-labs\\.conda\\lib\\site-packages (from openai<2.0.0,>=1.32.0->langchain-openai) (4.66.4)\n",
+      "Requirement already satisfied: typing-extensions<5,>=4.7 in c:\\users\\vaski\\desktop\\langchain-labs\\.conda\\lib\\site-packages (from openai<2.0.0,>=1.32.0->langchain-openai) (4.12.2)\n",
+      "Requirement already satisfied: annotated-types>=0.4.0 in c:\\users\\vaski\\desktop\\langchain-labs\\.conda\\lib\\site-packages (from pydantic<3,>=1->langchain) (0.7.0)\n",
+      "Requirement already satisfied: pydantic-core==2.20.1 in c:\\users\\vaski\\desktop\\langchain-labs\\.conda\\lib\\site-packages (from pydantic<3,>=1->langchain) (2.20.1)\n",
+      "Requirement already satisfied: charset-normalizer<4,>=2 in c:\\users\\vaski\\desktop\\langchain-labs\\.conda\\lib\\site-packages (from requests<3,>=2->langchain) (3.3.2)\n",
+      "Requirement already satisfied: idna<4,>=2.5 in c:\\users\\vaski\\desktop\\langchain-labs\\.conda\\lib\\site-packages (from requests<3,>=2->langchain) (3.7)\n",
+      "Requirement already satisfied: urllib3<3,>=1.21.1 in c:\\users\\vaski\\desktop\\langchain-labs\\.conda\\lib\\site-packages (from requests<3,>=2->langchain) (2.2.2)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in c:\\users\\vaski\\desktop\\langchain-labs\\.conda\\lib\\site-packages (from requests<3,>=2->langchain) (2024.7.4)\n",
+      "Requirement already satisfied: greenlet!=0.4.17 in c:\\users\\vaski\\desktop\\langchain-labs\\.conda\\lib\\site-packages (from SQLAlchemy<3,>=1.4->langchain) (3.0.3)\n",
+      "Requirement already satisfied: regex>=2022.1.18 in c:\\users\\vaski\\desktop\\langchain-labs\\.conda\\lib\\site-packages (from tiktoken<1,>=0.7->langchain-openai) (2024.5.15)\n",
+      "Requirement already satisfied: exceptiongroup>=1.0.2 in c:\\users\\vaski\\desktop\\langchain-labs\\.conda\\lib\\site-packages (from anyio<5,>=3.5.0->openai<2.0.0,>=1.32.0->langchain-openai) (1.2.2)\n",
+      "Requirement already satisfied: httpcore==1.* in c:\\users\\vaski\\desktop\\langchain-labs\\.conda\\lib\\site-packages (from httpx<1,>=0.23.0->openai<2.0.0,>=1.32.0->langchain-openai) (1.0.5)\n",
+      "Requirement already satisfied: h11<0.15,>=0.13 in c:\\users\\vaski\\desktop\\langchain-labs\\.conda\\lib\\site-packages (from httpcore==1.*->httpx<1,>=0.23.0->openai<2.0.0,>=1.32.0->langchain-openai) (0.14.0)\n",
+      "Requirement already satisfied: jsonpointer>=1.9 in c:\\users\\vaski\\desktop\\langchain-labs\\.conda\\lib\\site-packages (from jsonpatch<2.0,>=1.33->langchain-core<0.3.0,>=0.2.22->langchain) (3.0.0)\n",
+      "Requirement already satisfied: colorama in c:\\users\\vaski\\desktop\\langchain-labs\\.conda\\lib\\site-packages (from tqdm>4->openai<2.0.0,>=1.32.0->langchain-openai) (0.4.6)\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "%pip install langchain langchain-openai python-dotenv"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Google Colab Notes\n",
-    "\n",
-    "🛑 Google Colab users must upload to the Colab environment once opened up.\n",
-    "\n",
-    "1. Open the Colab - [![Open in Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/Agentic-Insights/langchain-labs/blob/main/labs/002-tutorial.ipynb)\n",
-    "2. Click on the folder on the left bar - \"Files\"\n",
-    "3. Click on the Upload file icon and upload a sample markdown file named `002-tutorial.prompt.md`"
+    "### Colab support\n",
+    "The next section pulls the required artifact '002-tutorial.prompt.md' from GitHub and puts it in the current directory for Colab if it is missing."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "002-tutorial.prompt.md found in the current directory.\n"
+     ]
+    }
+   ],
    "source": [
-    "%pip install langchain langchain-openai python-dotenv"
+    "import os\n",
+    "\n",
+    "# Define the file name to check\n",
+    "file_name = '002-tutorial.prompt.md'\n",
+    "# Define the repository URL to clone if the file is not found\n",
+    "repo_url = 'https://github.com/Agentic-Insights/langchain-labs'\n",
+    "\n",
+    "# Check if the file exists in the current directory\n",
+    "if not os.path.isfile(file_name):\n",
+    "    print(f\"{file_name} not found. Cloning the repository.\")\n",
+    "    # Use the `!` command to clone the repository in Google Colab\n",
+    "    !git clone {repo_url}\n",
+    "    !cp langchain-labs/labs/{file_name} .\n",
+    "else:\n",
+    "    print(f\"{file_name} found in the current directory.\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,9 +128,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "OpenAI API key found in environment variables.\n"
+     ]
+    }
+   ],
    "source": [
     "# Load the OpenAI API key from the environment variables\n",
     "load_dotenv()\n",
@@ -67,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,9 +290,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello! I have successfully loaded the prompt.md file for this tutorial. Here’s a haiku about artificial intelligence:\n",
+      "\n",
+      "Silent circuits hum,  \n",
+      "Learning, growing in the dark,  \n",
+      "Mind of code takes flight.\n"
+     ]
+    }
+   ],
    "source": [
     "# Use the chain\n",
     "response = chain.invoke({\"topic\": \"artificial intelligence\"})\n",
@@ -219,9 +318,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello! I've successfully loaded the prompt.md file for this tutorial. Here’s a haiku about space exploration:\n",
+      "\n",
+      "Stars whisper secrets,  \n",
+      "Vastness calls the brave to roam,  \n",
+      "Beyond our blue home.\n"
+     ]
+    }
+   ],
    "source": [
     "# Let's try another topic\n",
     "response = chain.invoke({\"topic\": \"space exploration\"})\n",
