clarify tutorials and readme

--- a/labs/002-tutorial.ipynb
+++ b/labs/002-tutorial.ipynb
@@ -68,6 +68,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Load enviornment variables / keys"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -83,6 +90,13 @@
     "        print(\"OPENAI_API_KEY not found in environment variables or Google Colab userdata.\")\n",
     "else:\n",
     "    print(\"OpenAI API key found in environment variables.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Instantiate a LangChain llm abstraction\n"
    ]
   },
   {
@@ -105,7 +119,7 @@
     "\n",
     "1. We load the content of prompt.md into the variable `prompt_template`.\n",
     "1. We create a ChatPromptTemplate from this content using `ChatPromptTemplate.from_template(prompt_template)`.\n",
-    "1. The `chat_prompt.format(topic=topic)` line shows exactly how the template replaces the `{topic}` placeholder with the actual topic. This is what's happening behind the scenes when we use the template in our chain.\n"
+    "\n"
    ]
   },
   {
@@ -122,7 +136,7 @@
     "# Load the prompt template from file\n",
     "prompt_template = load_prompt_template('002-tutorial.prompt.md')\n",
     "# Create a ChatPromptTemplate\n",
-    "chat_prompt = ChatPromptTemplate.from_template(prompt_template)\n"
+    "chat_prompt = ChatPromptTemplate.from_template(prompt_template)"
    ]
   },
   {
@@ -169,7 +183,7 @@
     "\n",
     "# Create components\n",
     "prompt = ChatPromptTemplate.from_template(\"Tell me a fact about {topic}\")\n",
-    "llm = ChatOpenAI(model=\"gpt-4-1106-preview\")\n",
+    "llm = ChatOpenAI(model=\"gpt-4-mini\")\n",
     "\n",
     "# Create sequence\n",
     "sequence = RunnableSequence(\n",
@@ -208,6 +222,7 @@
    "outputs": [],
    "source": [
     "# Create a RunnableSequence\n",
+    "# in this case we just have a chain of one 'chat_prompt'\n",
     "chain = RunnableSequence(\n",
     "    chat_prompt,\n",
     "    llm\n",
@@ -235,7 +250,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "#### Now Let's try substituting another topic"
+   ]
   },
   {
    "cell_type": "code",
@@ -252,7 +269,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### This notebook demonstrates how PromptTemplates work with file input in LangChain."
+    "\n",
+    "\n",
+    "### Next Steps:\n",
+    "- The next tutorial requires setting up your local Python environment and moving into your own coding environment. \n",
+    "- Make sure you have Python installed and are comfortable working in your preferred development setup."
    ]
   }
  ],
